--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background-color: #fdfaff6e;
 }
 ol, ul {
 	list-style: none;
@@ -42,3 +43,38 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+
+  @font-face {
+    font-family:'Spoqa Han Sans';
+    font-weight: 200;
+    src: url(./css/fonts/SpoqaHanSansThin.woff) format('woff'),
+         url(./css/fonts/SpoqaHanSansThin.woff2) format('woff2'),
+         url(./css/fonts/SpoqaHanSansThin.ttf) format('truetype');
+  }
+
+  @font-face {
+    font-family:'Spoqa Han Sans';
+    font-weight: 300;
+    src: url(./css/fonts/SpoqaHanSansLight.woff) format('woff'),
+         url(./css/fonts/SpoqaHanSansLight.woff2) format('woff2'),
+         url(./css/fonts/SpoqaHanSansLight.ttf) format('truetype');
+  }
+
+  @font-face {
+    font-family:'Spoqa Han Sans';
+    font-weight: 400;
+    font-style: normal;
+    src: url(./css/fonts/SpoqaHanSansRegular.woff) format('woff'),
+         url(./css/fonts/SpoqaHanSansRegular.woff2) format('woff2'),
+         url(./css/fonts/SpoqaHanSansRegular.ttf) format('truetype');
+  }
+
+  @font-face {
+    font-family:'Spoqa Han Sans';
+    font-weight: 500;
+    src: url(./css/fonts/SpoqaHanSansBold.woff) format('woff'),
+         url(./css/fonts/SpoqaHanSansBold.woff2) format('woff2'),
+         url(./css/fonts/SpoqaHanSansBold.ttf) format('truetype');
+  } 
